# just-tri-it

./: .gitignore  1.txt  README.md  check_property.py  demo.py  ge_sign.py  internship record 5.30 English.md  internship record 5.30.md  internship record 5.31  main.py  pyproject.toml  re_des.py  test_prob2.md  test_prob3.md  test_requirements.txt
Sijie_Notes/: FOR_INV_Resonance.lean  internship record 5.30 English.md  proof.lean  resonance.lean
datasets/: H_lcb_1.txt  H_lcb_2.txt  H_lcb_3.txt  H_lcb_5.txt  H_lcb_6.txt  H_lcb_7.txt  S_lcb_2.txt  S_lcb_4.txt  codeelo_inexact.json  codeelo_inexact_raw.json  convert_codeelo.py  id_get.py  random_select.py  split_data.py  test.json  test_codeelo_inexact.json
datasets/he_mbpp_subsets/: he_gpt-4o_low_probability.txt  mbpp_gpt-4o_low_probability_part_1.txt  mbpp_gpt-4o_low_probability_part_2.txt
datasets/lcb_subsets/: H_lcb_4.txt  S_lcb_1.txt  S_lcb_3.txt  S_lcb_5.txt  all_1.txt  all_170.txt  all_2.txt  all_3.txt  all_4.txt  gpt-4o_low_20.txt  out_of_25_half_1.txt  out_of_25_half_2.txt  out_of_32_1.txt  out_of_32_2.txt  out_of_32_3.txt  out_of_32_4.txt  re_gpt_1.txt  re_gpt_2.txt  re_gpt_3.txt  special_task.txt  sub_1.txt  sub_1_2.txt  sub_2.txt  sub_2_2.txt  sub_3.txt  sub_3_1.txt  sub_3_2.txt  sub_4.txt  sub_4_1.txt  sub_4_2.txt  sub_5.txt  sub_5_1.txt  sub_5_2.txt  sub_6.txt  sub_6_1.txt  sub_6_2.txt  sub_7.txt  sub_7_1.txt  (+4 more)
doc/: Examples.md  PreprocessDataset.md
drafts/: logic.py  semantic_deltas.py  vb_selector.py
examples/: test_prob1.md  test_prob3.md  test_prob4.md  test_prob5.md  test_prob6.md
exp1108_5_1/: data.jsonl
motivating/: correct.py  doubao.py
presentation/: Makefile  bibliography.bib  presentation.aux  presentation.bbl  presentation.blg  presentation.fdb_latexmk  presentation.fls  presentation.nav  presentation.tex  presentation.vrb
proofs/: COR_FIB_Resonance.lean  Proofs.lean  README.md  SemanticTriangulation.lean  Triangulation.lean  lakefile.lean
scripts/: cal_entropy.py  check_TF_prob.py  code_to_string.py  dataset_json_filesystem_converter.py  merge_entro.py  plot_venn_ablation.py  split_lcb.py
tests/: test_enum_sinv.py  test_infinite_fibers.py  test_llm.py  test_program.py  test_programs.py  test_property.py
(+229 files in other folders)
