[project]
name = "viberate"
version = "0.1.0"
description = "Enhancing confidence in LLM-generated code via resonance check"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mistletoe>=1.4.0",
    "requests>=2.32.4",
    "numpy>=1.26.0",
    "jsonlines>=4.0.0",
]

[project.scripts]
demo = "viberate.demo:main"
benchmark = "viberate.benchmark:main"
preprocess_lcb = "viberate.preprocess_lcb:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "ruff>=0.12.3",
]

[tool.ruff.lint]
extend-select = ["B"]
