[project]
name = "just-tri-it"
version = "0.1.0"
description = "Enhancing confidence in LLM-generated code via resonance check"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mistletoe>=1.4.0",
    "numpy>=1.26.0",
    "jsonlines>=4.0.0",
]

[project.scripts]
benchmark = "just_tri_it.benchmark:main"
preprocess_dataset = "just_tri_it.preprocess_dataset:main"
experiment = "just_tri_it.experiment:main"
analyze = "just_tri_it.analyze:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "ruff>=0.12.3",
]

[tool.ruff.lint]
extend-select = ["B"]
