[project]
name = "just-tri-it"
version = "0.1.0"
description = "Enhancing confidence in LLM-generated code via resonance check"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mistletoe>=1.4.0",
    "numpy>=1.26.0",
    "jsonlines>=4.0.0",
    "matplotlib>=3.10.6",
    "pandas>=2.3.2",
    "sympy>=1.14.0",
    "orjson>=3.11.3",
    "typeguard>=4.4.4",
]

[project.scripts]
benchmark = "just_tri_it.benchmark:main"
preprocess_dataset = "just_tri_it.preprocess_dataset:main"
experiment = "just_tri_it.experiment:main"
analyze = "just_tri_it.analyze:main"
construct_judges = "just_tri_it.construct_judges:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "ruff>=0.12.3",
]

[tool.ruff.lint]
extend-select = ["B"]
